feat(java): add java wrapper unit tests